# noeticlayer-project

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
agents/: README.md
api/: dependencies.py  main.py
api/middleware/: request_context.py
api/routes/: health.py  memories.py
api/schemas/: memory.py
api/services/: memory_api_service.py
api/utils/: logging.py
core/: README.md
core/services/: chunking_service.py  embedding_provider.py  memory_service.py
core/tests/: test_memory_service.py  test_openai_embedding_provider.py  test_semantic_memory_service.py
docs/architecture/: system-overview.md
infrastructure/: README.md
mcp/: README.md
runtime/: README.md
schema/: README.md
schema/data_contracts/: memory-item.md
schema/migrations/: 001_initial_schema.sql  002_add_workspace_scope_to_memory_items.sql  003_add_chunked_semantic_memory.sql
scripts/: bootstrap-scaffold.sh  fill-scaffolding.sh
scripts/database/: run-migrations.sh
scripts/infrastructure/: configuration-roles.sh  configure-devbox-login.sh  create-noeticlayer-devbox.sh  create-noeticlayer-vpc.sh  fastapi-scaffolding.sh  recreate-noeticlayer-devbox.sh  start-noeticlayer-devbox.sh  stop-noeticlayer-devbox.sh
sync/: README.md
tools/: README.md
